<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activity.Activity.Setting">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingtb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tbcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/Setting"
        app:titleTextColor="@color/cardview_light_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:paddingLeft="5dp"
            android:text="@string/general"
            android:textColor="@color/black"
            android:textSize="20dp" />


        <LinearLayout
            android:id="@+id/languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:src="#230655" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginLeft="-45dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/ic_language" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingLeft="40dp"
                android:text="@string/change_language"
                android:textColor="@color/black" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:src="#F44336" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginLeft="-45dp"
                android:layout_marginTop="7dp"
                android:padding="2dp"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingLeft="40dp"
                android:text="@string/logout"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:paddingLeft="5dp"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textSize="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="#40C445" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginLeft="-45dp"
                android:layout_marginTop="9dp"
                android:padding="2dp"
                android:src="@drawable/ic_notification" />

            <Switch
                android:id="@+id/switch12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:paddingLeft="40dp"
                android:text="@string/health_tips"
                android:textColor="@color/black"
                android:textSize="17dp" />

        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:paddingLeft="5dp"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textSize="20dp" />


        <LinearLayout
            android:id="@+id/privacypolicys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="#00B0FF" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginLeft="-45dp"
                android:layout_marginTop="9dp"
                android:padding="2dp"
                android:src="@drawable/privacy" />

            <TextView
                android:id="@+id/privacypolicydata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="40dp"
                android:textSize="17dp"
                android:textColor="@color/black"
                android:text="@string/privacy_policy" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="#FF9100" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginLeft="-45dp"
                android:layout_marginTop="9dp"
                android:padding="2dp"
                android:src="@drawable/share" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="40dp"
                android:textSize="17dp"
                android:textColor="@color/black"
                android:text="@string/share_this_app" />

        </LinearLayout>


    </LinearLayout>



</LinearLayout>