<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.Activity.absviewA">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/abstb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tbcolor"
        app:titleTextColor="@color/white"
        app:title="@string/Abs"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/absvideo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:background="@color/black"
        app:controller_layout_id="@layout/ustom_controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abstb"
        app:resize_mode="fixed_width"
        app:show_buffering="when_playing">


    </com.google.android.exoplayer2.ui.PlayerView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="506dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/absvideo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title"
                android:layout_width="383dp"
                android:layout_height="35dp"
                android:fontFamily="@font/poppins_semibold"
                android:paddingLeft="@dimen/_7sdp"
                android:paddingRight="@dimen/_7sdp"
                android:text="@string/buttocks"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:fontFamily="@font/poppins"
                android:paddingLeft="@dimen/_7sdp"
                android:text="@string/level_beginner"
                android:textColor="#222020"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <View
                android:id="@+id/view"
                android:layout_width="@dimen/_290sdp"
                android:layout_height="2dp"
                android:background="#9E9999"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <TextView
                android:id="@+id/absdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:paddingLeft="@dimen/_7sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingRight="@dimen/_7sdp"
                android:text="@string/desc"
                android:textColor="#403D3D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/absdescription1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:paddingLeft="@dimen/_7sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingRight="@dimen/_7sdp"
                android:text="@string/seconddesc"
                android:textColor="#403D3D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/absdescription" />


            <View
                android:id="@+id/views"
                android:layout_width="@dimen/_290sdp"
                android:layout_height="2dp"
                android:background="#9E9999"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/absdescription1" />


            <View
                android:id="@+id/viewsss"
                android:layout_width="@dimen/_290sdp"
                android:layout_height="2dp"
                android:background="#9E9999"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:paddingLeft="@dimen/_7sdp"
                android:text="More Related Excercises"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subdescription" />

            <View
                android:id="@+id/viewss"
                android:layout_width="@dimen/_290sdp"
                android:layout_height="2dp"
                android:background="#9E9999"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/subdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:paddingLeft="@dimen/_7sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingRight="@dimen/_7sdp"
                android:text="@string/subdesc"
                android:textColor="#403D3D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/absdescription1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/abssubrv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.0" />






        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>